# mal-cpp

./: .clang-tidy  CMakeLists.txt  README.md
include/: env.hpp  eval.hpp  read.hpp  types.hpp
source/: env.cpp  eval.cpp  main.cpp  read.cpp
